--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Color flippah</title>
+        <link rel="stylesheet" href="flippystyle.css">
+        
+    </head>
+    <body class="bod">
+<h1>Color</h1><br>
+<button type="button" id="theButton">Click Me!</button>
+    </body>
+    <script src="flippy.js"></script>
+
+</html>
